Implementado todo lo relativo a productos y categorías

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=dawazon
 # Longitud de los ID custom
 id.length=12
+
+upload.delete=true
+upload.root-location=system-images
