--- a/proxy/conf/nginx.conf
+++ b/proxy/conf/nginx.conf
@@ -6,7 +6,7 @@ http {
 
     server {
         listen 80;
-        server_name dominio.com;
+        server_name www.dawazon.com;
         return 301 https://$host$request_uri;
     }
 
@@ -20,21 +20,11 @@ http {
         ssl_prefer_server_ciphers on;
 
         location / {
-            proxy_pass http://api:3000;
+            proxy_pass http://app:3000;
                         proxy_set_header Host $host;
                         proxy_set_header X-Real-IP $remote_addr;
                         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                         proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /ws/ {
-            proxy_pass http://api:3000;  # o donde esté tu backend
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-            proxy_set_header Host $host;
-            proxy_pass_request_headers on;
-            proxy_set_header Authorization $http_authorization;
         }
 
         # /test → servicio (escalable)
