--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,3 +68,6 @@ logging.level.es.joseluisgs.tienda.services.email=DEBUG
 # OJO que si no se cambia esto Springboot sólo admite imágenes de hasta 1MB o 2MB más o menos
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+pebble.cache=false
+pebble.suffix=.peb.html
+pebble.defaultLocale=es_ES
