--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -35,7 +35,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # interferir con las imágenes de desarrollo.
 upload.root-location=test-images
 # Borrar las imágenes de test al arrancar está bien.
-upload.delete=true
+upload.delete=false
 
 # Tamaño de archivos
 spring.servlet.multipart.max-file-size=10MB
