--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=dawazon
 # Longitud de los ID custom
 id.length=12
 
-upload.delete=true
+upload.delete=false
 upload.root-location=system-images
 
 # Stripe
@@ -21,12 +21,12 @@ spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}/${POSTGRES_DA
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DATABASE_USER:user}
 spring.datasource.password=${DATABASE_PASSWORD:pass}
-# 2. Configuración de JPA (Hibernate)
+# 2. Configuraciï¿½n de JPA (Hibernate)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-# Dialecto específico de PostgreSQL
+# Dialecto especï¿½fico de PostgreSQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-# 3. Forzar la ejecución de data.sql
+# 3. Forzar la ejecuciï¿½n de data.sql
 # Por defecto, Spring Boot solo ejecuta data.sql en bases de datos embebidas (como H2).
 # Con 'always', le decimos que lo ejecute siempre.
 spring.sql.init.mode=never
@@ -45,7 +45,7 @@ spring.data.mongodb.database=${MONGO_DATABASE:pedidos}
 spring.data.mongodb.username=${DATABASE_USER:user}
 spring.data.mongodb.password=${DATABASE_PASSWORD:pass}
 spring.data.mongodb.authentication-database=admin
-# Email desde donde se envían los correos
+# Email desde donde se envï¿½an los correos
 app.mail.from=${MAIL_FROM:noreply@tienda.dev}
 # Mailtrap
 ## EMAIL CONFIGURATION - DESARROLLO CON MAILTRAP
@@ -53,7 +53,7 @@ spring.mail.host=${MAIL_HOST:sandbox.smtp.mailtrap.io}
 spring.mail.port=${MAIL_PORT:2525}
 spring.mail.username=${MAIL_USERNAME:a422f93316a7c8}
 spring.mail.password=${MAIL_PASSWORD:8fa17f600a0958}
-# Mailtrap no requiere autenticación SSL/TLS
+# Mailtrap no requiere autenticaciï¿½n SSL/TLS
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.properties.mail.smtp.ssl.enable=false
@@ -65,7 +65,7 @@ logging.level.es.joseluisgs.tienda.services.email=DEBUG
 
 
 
-# OJO que si no se cambia esto Springboot sólo admite imágenes de hasta 1MB o 2MB más o menos
+# OJO que si no se cambia esto Springboot sï¿½lo admite imï¿½genes de hasta 1MB o 2MB mï¿½s o menos
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 pebble.cache=false
